@@ -2,12 +2,11 @@ package com.agentengine.engine.events;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
-import com.agentengine.engine.api.beans.session.ToolExecution;
 import com.agentengine.engine.api.beans.session.Message;
 import com.agentengine.engine.api.beans.session.Role;
 import com.agentengine.engine.api.beans.session.ToolCall;
-import java.time.Instant;
 import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.Map;
 import org.junit.jupiter.api.Test;
@@ -22,21 +21,19 @@ class AgentEventAdapterTest {
     ToolCall toolCall = new ToolCall("id-1", "echo", Map.of("text", "hi"));
     adapter.onToolPlan("session-1", List.of(toolCall));
 
-    ToolExecution execution = new ToolExecution(toolCall, "ok", "done", Instant.parse("2024-01-01T00:00:00Z"), 12);
-    adapter.onToolExecution("session-1", execution);
+    adapter.onToolCallResult("session-1", "id-1", "done");
 
     assertThat(published).hasSize(2);
     AgentEvent planEvent = published.getFirst();
     assertThat(planEvent.event()).isEqualTo("tool_plan");
     assertThat(planEvent.sessionId()).isEqualTo("session-1");
-    assertThat(planEvent.payload()).asList().first().isInstanceOf(Map.class);
 
-    AgentEvent execEvent = published.getLast();
-    assertThat(execEvent.event()).isEqualTo("tool_execution");
-    assertThat(execEvent.sessionId()).isEqualTo("session-1");
-    Map<?, ?> payload = (Map<?, ?>) execEvent.payload();
-    assertThat(payload.get("tool_name")).isEqualTo("echo");
-    assertThat(payload.get("status")).isEqualTo("ok");
+    AgentEvent resultEvent = published.getLast();
+    assertThat(resultEvent.event()).isEqualTo("tool_call_result");
+    assertThat(resultEvent.sessionId()).isEqualTo("session-1");
+    Map<?, ?> payload = (Map<?, ?>) resultEvent.payload();
+    assertThat(payload.get("toolCallId")).isEqualTo("id-1");
+    assertThat(payload.get("result")).isEqualTo("done");
   }
 
   @Test
@@ -44,32 +41,18 @@ class AgentEventAdapterTest {
     List<AgentEvent> published = new ArrayList<>();
     AgentEventAdapter adapter = new AgentEventAdapter(published::add);
 
-    adapter.onReasoningStart("session-2");
-    adapter.onReasoningEnd("session-2", Message.assistant("done"));
-    adapter.onToolRepair("session-2", List.of(), List.of());
+    adapter.onRunStarted("session-2", "run-123");
+    adapter.onStepStarted("session-2", "reasoning");
+    adapter.onReasoningMessageEnd("session-2", "msg-1");
+    adapter.onStepFinished("session-2", "reasoning");
+    adapter.onRunFinished("session-2", "run-123");
 
-    assertThat(published).hasSize(3);
-    assertThat(published.get(0).event()).isEqualTo("reasoning_start");
-    assertThat(published.get(1).event()).isEqualTo("reasoning_end");
-    assertThat(published.get(2).event()).isEqualTo("tool_repair");
-
-    Map<?, ?> payload = (Map<?, ?>) published.get(1).payload();
-    assertThat(payload.get("responseContent")).isEqualTo("done");
-    assertThat(payload.get("responseThoughts")).isNull();
-  }
-
-  @Test
-  void adapterPublishesReasoningEndWithoutMessage() {
-    List<AgentEvent> published = new ArrayList<>();
-    AgentEventAdapter adapter = new AgentEventAdapter(published::add);
-
-    adapter.onReasoningEnd("session-5", null);
-
-    assertThat(published).hasSize(1);
-    AgentEvent event = published.getFirst();
-    assertThat(event.event()).isEqualTo("reasoning_end");
-    Map<?, ?> payload = (Map<?, ?>) event.payload();
-    assertThat(payload.get("status")).isEqualTo("end");
+    assertThat(published).hasSize(5);
+    assertThat(published.get(0).event()).isEqualTo("run_started");
+    assertThat(published.get(1).event()).isEqualTo("step_started");
+    assertThat(published.get(2).event()).isEqualTo("reasoning_message_end");
+    assertThat(published.get(3).event()).isEqualTo("step_finished");
+    assertThat(published.get(4).event()).isEqualTo("run_finished");
   }
 
   @Test
@@ -87,22 +70,5 @@ class AgentEventAdapterTest {
     Map<?, ?> payload = (Map<?, ?>) event.payload();
     assertThat(payload.get("final_answer")).isEqualTo("done");
     assertThat(payload.get("thoughts")).isEqualTo("thoughts");
-  }
-
-  @Test
-  void adapterPublishesFinalAnswerWithNullThoughts() {
-    List<AgentEvent> published = new ArrayList<>();
-    AgentEventAdapter adapter = new AgentEventAdapter(published::add);
-
-    Message message = Message.assistant("done");
-    adapter.onFinalAnswer("session-4", message);
-
-    assertThat(published).hasSize(1);
-    AgentEvent event = published.getFirst();
-    @SuppressWarnings("unchecked")
-    Map<String, Object> payload = (Map<String, Object>) event.payload();
-    assertThat(payload.get("final_answer")).isEqualTo("done");
-    assertThat(payload).containsKey("thoughts");
-    assertThat(payload.get("thoughts")).isNull();
   }
 }
